exports `jdk.internal.platform`